--- a/index.html
+++ b/index.html
@@ -25,6 +25,13 @@
             overflow: hidden;
             padding: 1rem;
         }
+        .profile-photo {
+            width: 150px;
+            height: 150px;
+            border-radius: 50%;
+            margin: auto;
+            display: block;
+        }
         h1, h2, h3 {
             color: #333;
         }
@@ -72,6 +79,7 @@
 <body>
     <header>
         <h1>Yash Anil Patil</h1>
+        <img src="path/to/your/photo.jpg" alt="Yash Patil" class="profile-photo">
         <p>EE Final Year Undergraduate (2024 Batch), Pune Maharashtra, India</p>
         <p>Phone: +919637587224, +917020447482 | Email: <a href="mailto:yashpatil7224@gmail.com">yashpatil7224@gmail.com</a></p>
     </header>
