--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 <body>
     <header>
         <h1>Yash Anil Patil</h1>
-        <img src="path/to/your/photo.jpg" alt="Yash Patil" class="profile-photo">
+        <img src="36049-1.jpg" alt="Yash Patil" class="profile-photo">
         <p>EE Final Year Undergraduate (2024 Batch), Pune Maharashtra, India</p>
         <p>Phone: +919637587224, +917020447482 | Email: <a href="mailto:yashpatil7224@gmail.com">yashpatil7224@gmail.com</a></p>
     </header>
