--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
             color: #333;
         }
         header {
-            background: #333;
+            background: #555;
             color: #fff;
-            padding: 1rem 0;
+            padding: 2rem 0;
             text-align: center;
         }
         .container {
@@ -29,8 +29,10 @@
             width: 150px;
             height: 150px;
             border-radius: 50%;
-            margin: auto;
+            margin: 1rem auto;
             display: block;
+            border: 5px solid #fff;
+            box-shadow: 0 0 15px rgba(0, 0, 0, 0.3);
         }
         h1, h2, h3 {
             color: #333;
@@ -79,7 +81,7 @@
 <body>
     <header>
         <h1>Yash Anil Patil</h1>
-        <img src="36049-1.jpg" alt="Yash Patil" class="profile-photo">
+        <img src="path/to/your/photo.jpg" alt="Yash Patil" class="profile-photo">
         <p>EE Final Year Undergraduate (2024 Batch), Pune Maharashtra, India</p>
         <p>Phone: +919637587224, +917020447482 | Email: <a href="mailto:yashpatil7224@gmail.com">yashpatil7224@gmail.com</a></p>
     </header>
