--- a/index.html
+++ b/index.html
@@ -34,7 +34,14 @@
             border: 5px solid #fff;
             box-shadow: 0 0 15px rgba(0, 0, 0, 0.3);
         }
-        h1, h2, h3 {
+        h1 {
+            color: #4CAF50;
+        }
+        a {
+            color: #4CAF50;
+            text-decoration: none;
+        }
+        h2 {
             color: #333;
         }
         .section {
@@ -63,17 +70,18 @@
         }
         .contact {
             text-align: center;
+            margin-bottom: 2rem;
         }
         .contact a {
-            color: #333;
+            color: #4CAF50;
             text-decoration: none;
-            border: 1px solid #333;
+            border: 1px solid #4CAF50;
             padding: 0.5rem 1rem;
             border-radius: 5px;
             transition: background 0.3s, color 0.3s;
         }
         .contact a:hover {
-            background: #333;
+            background: #4CAF50;
             color: #fff;
         }
     </style>
@@ -81,11 +89,14 @@
 <body>
     <header>
         <h1>Yash Anil Patil</h1>
-        <img src="36049-1.jpg" alt="Yash Patil" class="profile-photo">
+        <img src="path/to/your/photo.jpg" alt="Yash Patil" class="profile-photo">
         <p>EE Final Year Undergraduate (2024 Batch), Pune Maharashtra, India</p>
-        <p>Phone: +919637587224, +917020447482 | Email: <a href="mailto:yashpatil7224@gmail.com">yashpatil7224@gmail.com</a></p>
     </header>
     <div class="container">
+        <div class="section contact">
+            <p>Phone: +919637587224, +917020447482 | Email: <a href="mailto:yashpatil7224@gmail.com">yashpatil7224@gmail.com</a></p>
+            <p><a href="https://www.linkedin.com/in/patilyash948">LinkedIn</a> | <a href="https://github.com/patilyash948">GitHub</a></p>
+        </div>
         <div class="section">
             <h2>Career Objective</h2>
             <p>As an electrical engineering student with a keen interest in the IT field, I bring a unique combination of skills and knowledge to drive innovative solutions and solve complex problems. With a strong background in electrical engineering and hands-on experience in various IT domains, I have honed my skills through multiple internships in IoT core programming with C, Web Development (Frontend & Backend), machine learning, data analysis with Python, and Python development.</p>
@@ -126,10 +137,6 @@
                 <li><strong>MAHARASHTRA STATE BOARD OF TECHNICAL EDUCATION</strong> - Diploma in Electrical Engineering (2018-21), Percentage: 91.56%</li>
                 <li><strong>MAHARASHTRA STATE BOARD OF SECONDARY EDUCATION</strong> - 10th Std (2017-18), Percentage: 82.40%</li>
             </ul>
-        </div>
-        <div class="section contact">
-            <h2>Contact</h2>
-            <p><a href="https://www.linkedin.com/in/patilyash948">LinkedIn</a> | <a href="https://github.com/patilyash948">GitHub</a></p>
         </div>
     </div>
 </body>
