--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 <body>
     <header>
         <h1>Yash Anil Patil</h1>
-        <img src="path/to/your/photo.jpg" alt="Yash Patil" class="profile-photo">
+        <img src="photo.jpg" alt="Yash Patil" class="profile-photo">
         <p>EE Final Year Undergraduate (2024 Batch), Pune Maharashtra, India</p>
     </header>
     <div class="container">
