--- a/index.html
+++ b/index.html
@@ -1,8 +1,4 @@
-Certainly! Let's apply the same styling for the email, LinkedIn, GitHub links, and phone number to make them look like buttons.
 
-Here’s the updated HTML and CSS:
-
-```html
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -40,7 +36,7 @@ Here’s the updated HTML and CSS:
             box-shadow: 0 0 15px rgba(0, 0, 0, 0.3);
         }
         h1 {
-            color: #4CAF50;
+            color: #E67E22;
         }
         h2 {
             color: #333;
@@ -77,17 +73,17 @@ Here’s the updated HTML and CSS:
             margin: 0.5rem 0;
         }
         .contact a {
-            color: #4CAF50;
+            color: #E67E22;
             text-decoration: none;
-            border: 1px solid #4CAF50;
+            border: 1px solid #E67E22;
             padding: 0.5rem 1rem;
             border-radius: 5px;
             transition: background 0.3s, color 0.3s;
             display: inline-block;
-            margin: 0.5rem 0;
+            margin: 0.2rem;
         }
         .contact a:hover {
-            background: #4CAF50;
+            background: #E67E22;
             color: #fff;
         }
     </style>
@@ -100,11 +96,9 @@ Here’s the updated HTML and CSS:
     </header>
     <div class="container">
         <div class="section contact">
-            <p><a href="tel:+919637587224">+919637587224</a></p>
-            <p><a href="tel:+917020447482">+917020447482</a></p>
-            <p><a href="mailto:yashpatil7224@gmail.com">yashpatil7224@gmail.com</a></p>
-            <p><a href="https://www.linkedin.com/in/patilyash948">LinkedIn</a></p>
-            <p><a href="https://github.com/patilyash948">GitHub</a></p>
+            <p><a href="tel:+919637587224">+919637587224</a> <a href="tel:+917020447482">+917020447482</a></p>
+            <p><a href="mailto:yashpatil7224@gmail.com">patilyash948@gmail.com</a></p>
+            <p><a href="https://www.linkedin.com/in/patilyash948">LinkedIn</a> <a href="https://github.com/patilyash948">GitHub</a></p>
         </div>
         <div class="section">
             <h2>Career Objective</h2>
@@ -150,6 +144,3 @@ Here’s the updated HTML and CSS:
     </div>
 </body>
 </html>
-```
-
-This code adds a uniform style to your phone numbers, email, LinkedIn, and GitHub links, making them look like buttons. Each link is now styled with a border, padding, and hover effect to improve the visual appeal and consistency of your contact information.
