--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
+Sure, let's move the phone numbers below the photo in the header section and adjust the contact section accordingly. Here’s the updated HTML and CSS:
 
+```html
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -93,10 +95,10 @@
         <h1>Yash Anil Patil</h1>
         <img src="Photo.jpg" alt="Yash Patil" class="profile-photo">
         <p>EE Final Year Undergraduate (2024 Batch), Pune Maharashtra, India</p>
+        <p><a href="tel:+919637587224">+919637587224</a> <a href="tel:+917020447482">+917020447482</a></p>
     </header>
     <div class="container">
         <div class="section contact">
-            <p><a href="tel:+919637587224">+919637587224</a> <a href="tel:+917020447482">+917020447482</a></p>
             <p><a href="mailto:yashpatil7224@gmail.com">patilyash948@gmail.com</a></p>
             <p><a href="https://www.linkedin.com/in/patilyash948">LinkedIn</a> <a href="https://github.com/patilyash948">GitHub</a></p>
         </div>
