--- a/index.html
+++ b/index.html
@@ -1,6 +1,4 @@
-Sure, let's move the phone numbers below the photo in the header section and adjust the contact section accordingly. Here’s the updated HTML and CSS:
 
-```html
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -17,7 +15,7 @@ Sure, let's move the phone numbers below the photo in the header section and adj
             color: #333;
         }
         header {
-            background: #555;
+            background: url('header-bg.jpg') no-repeat center center/cover;
             color: #fff;
             padding: 2rem 0;
             text-align: center;
@@ -88,6 +86,9 @@ Sure, let's move the phone numbers below the photo in the header section and adj
             background: #E67E22;
             color: #fff;
         }
+        .phone {
+            color: #fff;
+        }
     </style>
 </head>
 <body>
@@ -95,11 +96,11 @@ Sure, let's move the phone numbers below the photo in the header section and adj
         <h1>Yash Anil Patil</h1>
         <img src="Photo.jpg" alt="Yash Patil" class="profile-photo">
         <p>EE Final Year Undergraduate (2024 Batch), Pune Maharashtra, India</p>
-        <p><a href="tel:+919637587224">+919637587224</a> <a href="tel:+917020447482">+917020447482</a></p>
+        <p class="phone"><a href="tel:+919637587224">+919637587224</a> <a href="tel:+917020447482">+917020447482</a></p>
     </header>
     <div class="container">
         <div class="section contact">
-            <p><a href="mailto:yashpatil7224@gmail.com">patilyash948@gmail.com</a></p>
+            <p><a href="mailto:patilyash948@gmail.com">patilyash948@gmail.com</a></p>
             <p><a href="https://www.linkedin.com/in/patilyash948">LinkedIn</a> <a href="https://github.com/patilyash948">GitHub</a></p>
         </div>
         <div class="section">
