--- a/index.html
+++ b/index.html
@@ -86,8 +86,10 @@
             background: #E67E22;
             color: #fff;
         }
-        .phone {
+        .phone a {
             color: #fff;
+            text-decoration: none;
+            margin: 0.5rem;
         }
     </style>
 </head>
