--- a/index.html
+++ b/index.html
@@ -99,12 +99,10 @@
         <img src="Photo.jpg" alt="Yash Patil" class="profile-photo">
         <p>EE Final Year Undergraduate (2024 Batch), Pune Maharashtra, India</p>
         <p class="phone"><a href="tel:+919637587224">+919637587224</a> <a href="tel:+917020447482">+917020447482</a></p>
+        <p><a href="mailto:patilyash948@gmail.com" style="color:#E67E22;">patilyash948@gmail.com</a></p>
+        <p><a href="https://www.linkedin.com/in/patilyash948" style="color:#E67E22;">LinkedIn</a> <a href="https://github.com/patilyash948" style="color:#E67E22;">GitHub</a></p>
     </header>
     <div class="container">
-        <div class="section contact">
-            <p><a href="mailto:patilyash948@gmail.com">patilyash948@gmail.com</a></p>
-            <p><a href="https://www.linkedin.com/in/patilyash948">LinkedIn</a> <a href="https://github.com/patilyash948">GitHub</a></p>
-        </div>
         <div class="section">
             <h2>Career Objective</h2>
             <p>As an electrical engineering student with a keen interest in the IT field, I bring a unique combination of skills and knowledge to drive innovative solutions and solve complex problems. With a strong background in electrical engineering and hands-on experience in various IT domains, I have honed my skills through multiple internships in IoT core programming with C, Web Development (Frontend & Backend), machine learning, data analysis with Python, and Python development.</p>
