--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -15,7 +14,7 @@
             color: #333;
         }
         header {
-            background: url('header-bg.png') no-repeat center center/cover;
+            background: url('header-bg.jpg') no-repeat center center/cover;
             color: #fff;
             padding: 2rem 0;
             text-align: center;
@@ -91,6 +90,9 @@
             text-decoration: none;
             margin: 0.5rem;
         }
+        .career-objective p {
+            text-align: right;
+        }
     </style>
 </head>
 <body>
@@ -103,7 +105,7 @@
         <p><a href="https://www.linkedin.com/in/patilyash948" style="color:#E67E22;">LinkedIn</a> <a href="https://github.com/patilyash948" style="color:#E67E22;">GitHub</a></p>
     </header>
     <div class="container">
-        <div class="section">
+        <div class="section career-objective">
             <h2>Career Objective</h2>
             <p>As an electrical engineering student with a keen interest in the IT field, I bring a unique combination of skills and knowledge to drive innovative solutions and solve complex problems. With a strong background in electrical engineering and hands-on experience in various IT domains, I have honed my skills through multiple internships in IoT core programming with C, Web Development (Frontend & Backend), machine learning, data analysis with Python, and Python development.</p>
         </div>
