--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -91,7 +92,7 @@
             margin: 0.5rem;
         }
         .career-objective p {
-            text-align: right;
+            text-align: justify;
         }
     </style>
 </head>
@@ -101,8 +102,10 @@
         <img src="Photo.jpg" alt="Yash Patil" class="profile-photo">
         <p>EE Final Year Undergraduate (2024 Batch), Pune Maharashtra, India</p>
         <p class="phone"><a href="tel:+919637587224">+919637587224</a> <a href="tel:+917020447482">+917020447482</a></p>
-        <p><a href="mailto:patilyash948@gmail.com" style="color:#E67E22;">patilyash948@gmail.com</a></p>
-        <p><a href="https://www.linkedin.com/in/patilyash948" style="color:#E67E22;">LinkedIn</a> <a href="https://github.com/patilyash948" style="color:#E67E22;">GitHub</a></p>
+        <div class="contact">
+            <p><a href="mailto:patilyash948@gmail.com">patilyash948@gmail.com</a></p>
+            <p><a href="https://www.linkedin.com/in/patilyash948">LinkedIn</a> <a href="https://github.com/patilyash948">GitHub</a></p>
+        </div>
     </header>
     <div class="container">
         <div class="section career-objective">
