--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -19,6 +18,7 @@
             color: #fff;
             padding: 2rem 0;
             text-align: center;
+            position: relative;
         }
         .container {
             width: 80%;
@@ -86,10 +86,19 @@
             background: #E67E22;
             color: #fff;
         }
-        .phone a {
+        .phone a, .info-box a {
             color: #fff;
             text-decoration: none;
-            margin: 0.5rem;
+            border: 1px solid #E67E22;
+            padding: 0.5rem 1rem;
+            border-radius: 5px;
+            display: inline-block;
+            margin: 0.2rem;
+            background: rgba(0, 0, 0, 0.6);
+        }
+        .phone a:hover, .info-box a:hover {
+            background: #E67E22;
+            color: #fff;
         }
         .career-objective p {
             text-align: justify;
@@ -100,11 +109,17 @@
     <header>
         <h1>Yash Anil Patil</h1>
         <img src="Photo.jpg" alt="Yash Patil" class="profile-photo">
-        <p>EE Final Year Undergraduate (2024 Batch), Pune Maharashtra, India</p>
-        <p class="phone"><a href="tel:+919637587224">+919637587224</a> <a href="tel:+917020447482">+917020447482</a></p>
+        <div class="info-box">
+            <a href="#">EE Final Year Undergraduate (2024 Batch), Pune Maharashtra, India</a>
+        </div>
+        <div class="phone">
+            <a href="tel:+919637587224">+919637587224</a> 
+            <a href="tel:+917020447482">+917020447482</a>
+        </div>
         <div class="contact">
-            <p><a href="mailto:patilyash948@gmail.com">patilyash948@gmail.com</a></p>
-            <p><a href="https://www.linkedin.com/in/patilyash948">LinkedIn</a> <a href="https://github.com/patilyash948">GitHub</a></p>
+            <a href="mailto:patilyash948@gmail.com">patilyash948@gmail.com</a>
+            <a href="https://www.linkedin.com/in/patilyash948">LinkedIn</a>
+            <a href="https://github.com/patilyash948">GitHub</a>
         </div>
     </header>
     <div class="container">
