--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
             <a href="tel:+919637587224">+919637587224</a> 
             <a href="tel:+917020447482">+917020447482</a>
         </div>
-        <div class="contact">
+        <div class="phone">
             <a href="mailto:patilyash948@gmail.com">patilyash948@gmail.com</a>
             <a href="https://www.linkedin.com/in/patilyash948">LinkedIn</a>
             <a href="https://github.com/patilyash948">GitHub</a>
