--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         header {
             background: url('header-bg.png') no-repeat center center/cover;
             color: #fff;
-            padding: 2rem 0;
+            padding: 1rem 0;
             text-align: center;
             position: relative;
         }
@@ -112,11 +112,11 @@
         <div class="info-box">
             <a href="#">EE Final Year Undergraduate (2024 Batch), Pune Maharashtra, India</a>
         </div>
-        <div class="phone">
+        <div class="contact">
             <a href="tel:+919637587224">+919637587224</a> 
             <a href="tel:+917020447482">+917020447482</a>
         </div>
-        <div class="phone">
+        <div class="contact">
             <a href="mailto:patilyash948@gmail.com">patilyash948@gmail.com</a>
             <a href="https://www.linkedin.com/in/patilyash948">LinkedIn</a>
             <a href="https://github.com/patilyash948">GitHub</a>
