--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
     <header>
         <h1>Yash Anil Patil</h1>
         <img src="Photo.jpg" alt="Yash Patil" class="profile-photo">
-        <div class="info-box">
+        <div class="contact">
             <a href="#">EE Final Year Undergraduate (2024 Batch), Pune Maharashtra, India</a>
         </div>
         <div class="contact">
