--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -86,7 +87,7 @@
             background: #E67E22;
             color: #fff;
         }
-        .phone a, .info-box a {
+        .info-box a {
             color: #fff;
             text-decoration: none;
             border: 1px solid #E67E22;
@@ -95,8 +96,9 @@
             display: inline-block;
             margin: 0.2rem;
             background: rgba(0, 0, 0, 0.6);
+            transition: background 0.3s, color 0.3s;
         }
-        .phone a:hover, .info-box a:hover {
+        .info-box a:hover {
             background: #E67E22;
             color: #fff;
         }
@@ -109,14 +111,12 @@
     <header>
         <h1>Yash Anil Patil</h1>
         <img src="Photo.jpg" alt="Yash Patil" class="profile-photo">
-        <div class="contact">
+        <div class="info-box">
             <a href="#">EE Final Year Undergraduate (2024 Batch), Pune Maharashtra, India</a>
         </div>
         <div class="contact">
             <a href="tel:+919637587224">+919637587224</a> 
             <a href="tel:+917020447482">+917020447482</a>
-        </div>
-        <div class="contact">
             <a href="mailto:patilyash948@gmail.com">patilyash948@gmail.com</a>
             <a href="https://www.linkedin.com/in/patilyash948">LinkedIn</a>
             <a href="https://github.com/patilyash948">GitHub</a>
