--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             color: #333;
         }
         header {
-            background: url('header-bg.png') no-repeat center center/cover;
+            background: url('header-bg.jpg') no-repeat center center/cover;
             color: #fff;
             padding: 2rem 0;
             text-align: center;
@@ -70,10 +70,7 @@
             text-align: center;
             margin-bottom: 2rem;
         }
-        .contact p {
-            margin: 0.5rem 0;
-        }
-        .contact a {
+        .contact a, .info-box {
             color: #E67E22;
             text-decoration: none;
             border: 1px solid #E67E22;
@@ -83,22 +80,7 @@
             display: inline-block;
             margin: 0.2rem;
         }
-        .contact a:hover {
-            background: #E67E22;
-            color: #fff;
-        }
-        .info-box a {
-            color: #fff;
-            text-decoration: none;
-            border: 1px solid #E67E22;
-            padding: 0.5rem 1rem;
-            border-radius: 5px;
-            display: inline-block;
-            margin: 0.2rem;
-            background: rgba(0, 0, 0, 0.6);
-            transition: background 0.3s, color 0.3s;
-        }
-        .info-box a:hover {
+        .contact a:hover, .info-box:hover {
             background: #E67E22;
             color: #fff;
         }
