--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             padding: 2rem 0;
             text-align: center;
             position: relative;
+            height: 500px;
         }
         .container {
             width: 80%;
@@ -94,7 +95,7 @@
         <h1>Yash Anil Patil</h1>
         <img src="Photo.jpg" alt="Yash Patil" class="profile-photo">
         <div class="info-box">
-            <a href="#">EE Final Year Undergraduate (2024 Batch), Pune Maharashtra, India</a>
+            EE Final Year Undergraduate (2024 Batch), Pune Maharashtra, India
         </div>
         <div class="contact">
             <a href="tel:+919637587224">+919637587224</a> 
