--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
             color: #333;
         }
         header {
-            background: url('header-bg.png') no-repeat center center/cover;
+            background: url('header-bg.jpg') no-repeat center center/cover;
             color: #fff;
             padding: 2rem 0;
             text-align: center;
             position: relative;
-            height: 460px;
+            height: 500px;
         }
         .container {
             width: 80%;
@@ -67,11 +67,7 @@
             padding: 0.5rem;
             border-radius: 5px;
         }
-        .contact {
-            text-align: center;
-            margin-bottom: 2rem;
-        }
-        .contact a, .info-box {
+        .info-box {
             color: #E67E22;
             text-decoration: none;
             border: 1px solid #E67E22;
@@ -81,12 +77,35 @@
             display: inline-block;
             margin: 0.2rem;
         }
-        .contact a:hover, .info-box:hover {
+        .info-box:hover {
             background: #E67E22;
             color: #fff;
         }
         .career-objective p {
             text-align: justify;
+        }
+        .contact-section {
+            background: #fff;
+            padding: 1rem;
+            margin: 1rem 0;
+            border-radius: 5px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+        .contact-section p, .contact-section a {
+            margin: 0.5rem 0;
+        }
+        .contact-section a {
+            color: #E67E22;
+            text-decoration: none;
+            border: 1px solid #E67E22;
+            padding: 0.5rem 1rem;
+            border-radius: 5px;
+            transition: background 0.3s, color 0.3s;
+            display: inline-block;
+        }
+        .contact-section a:hover {
+            background: #E67E22;
+            color: #fff;
         }
     </style>
 </head>
@@ -146,6 +165,15 @@
                 <li><strong>MAHARASHTRA STATE BOARD OF TECHNICAL EDUCATION</strong> - Diploma in Electrical Engineering (2018-21), Percentage: 91.56%</li>
                 <li><strong>MAHARASHTRA STATE BOARD OF SECONDARY EDUCATION</strong> - 10th Std (2017-18), Percentage: 82.40%</li>
             </ul>
+        </div>
+        <div class="section contact-section">
+            <h2>Contact</h2>
+            <p>Feel free to reach out to me via email or through my social media profiles.</p>
+            <p><a href="tel:+919637587224">+919637587224</a></p>
+            <p><a href="tel:+917020447482">+917020447482</a></p>
+            <p><a href="mailto:patilyash948@gmail.com">patilyash948@gmail.com</a></p>
+            <p><a href="https://www.linkedin.com/in/patilyash948">LinkedIn</a></p>
+            <p><a href="https://github.com/patilyash948">GitHub</a></p>
         </div>
     </div>
 </body>
