--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             color: #333;
         }
         header {
-            background: url('header-bg.png') no-repeat center center/cover;
+            background: url('header-bg.jpg') no-repeat center center/cover;
             color: #fff;
             padding: 2rem 0;
             text-align: center;
