--- a/index.html
+++ b/index.html
@@ -111,9 +111,9 @@
     background-color: #E67E22;
     color: white;
     border: none;
-    padding: 1rem 2rem;
+    padding: 0.8rem 1.6rem; /* Adjusted padding */
     text-transform: uppercase;
-    font-size: 1.2rem;
+    font-size: 1rem; /* Adjusted font size */
     cursor: pointer;
     border-radius: 5px;
     transition: background 0.3s, color 0.3s;
@@ -123,13 +123,14 @@
     transform: translateX(-50%);
 }
 
-@media (max-width: 400px) {
+@media (max-width: 768px) {
     .connect-button {
-        padding: 0.85rem 1.6rem; /* Adjusted padding */
-        font-size: 1rem; /* Adjusted font size */
-        bottom: 0.1rem; /* Adjusted position */
+        padding: 0.6rem 1.2rem; /* Further reduced padding */
+        font-size: 0.9rem; /* Further reduced font size */
+        bottom: 2rem; /* Adjusted position */
     }
 }
+
 
         .connect-button:hover {
             background-color: #D35400;
