--- a/index.html
+++ b/index.html
@@ -128,6 +128,19 @@
         padding: 0.6rem 1.2rem; /* Further reduced padding */
         font-size: 0.9rem; /* Further reduced font size */
         bottom: 0.1rem; /* Adjusted position */
+        background-color: #E67E22;
+    color: white;
+    border: none;
+    padding: 0.8rem 1.6rem; /* Adjusted padding */
+    text-transform: uppercase;
+    font-size: 1rem; /* Adjusted font size */
+    cursor: pointer;
+    border-radius: 5px;
+    transition: background 0.3s, color 0.3s;
+    position: absolute;
+    bottom: 1rem; /* Adjusted position */
+    left: 50%;
+    transform: translateX(-50%);
     }
 }
 
