--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
         <h1>Yash Anil Patil</h1>
         <img src="Photo.jpg" alt="Yash Patil" class="profile-photo">
         <div class="info-box">
-            EE Final Year Undergraduate (2024 Batch), Pune Maharashtra, India
+             2024 Batch Graduate, Pune Maharashtra, India
         </div>
         <div class="contact">
             <a href="tel:+919637587224" class="info-box">+919637587224</a> 
